--- a/pages/PageContact/PageContact.wxml
+++ b/pages/PageContact/PageContact.wxml
@@ -50,7 +50,8 @@
   <!--<view class="floating-add" bindtap="addSelectedContacts" wx:if="{{multiSelect}}">
     Ajouter
   </view>-->
-  <view class="floating-add" bindtap="sendOtp " wx:if="{{multiSelect}}">
+  <!--<view class="floating-add" bindtap="sendOtp " wx:if="{{multiSelect}}">-->
+  <view class="floating-add" bindtap="sendOtp">
     Ajouter
   </view>
 </view>
