--- a/pages/info_tontine/info_tontine.wxss
+++ b/pages/info_tontine/info_tontine.wxss
@@ -200,3 +200,22 @@ page {
     justify-content: center;
     margin: 0 auto;
   }
+
+  .user-list {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .user-item {
+    padding: 20rpx;
+    margin: 10rpx 0;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    text-align: center;
+    transition: all 0.2s;
+  }
+  .dragging {
+    background-color: #d9edf7;
+  }
+  
